<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorAlabama"
    tools:context="stc.app.stairwaytocollege.TuscaloosaRecommendCourses">

    <TextView
        android:id="@+id/tuscaloosaRecommendBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/schoolLogoRecommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/university_of_alabama_logo"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/demowatermark"
        android:layout_width="412dp"
        android:layout_height="830dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="DEMO"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#888888"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tuscaloosaRecommendTitle"
        android:layout_width="393dp"
        android:layout_height="107dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/titleFont"
        android:gravity="center"
        android:text="@string/tuscaloosa_name"
        android:textColor="@color/titleColorAlabama"
        android:textSize="@dimen/titleFontSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuscaloosaRecommendTitle2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/tuscaloosaCourseRec0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonSubmitBackgroundColorAlabama"
                android:onClick="showTuscaloosaCourseRecs"
                android:text="@string/tuscaloosa_subject0"
                android:textColor="@color/buttonTextColorAlabama"
                android:textSize="@dimen/classButtonFontSize"
                android:visibility="visible" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/listDividerThickness"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <Button
                android:id="@+id/tuscaloosaCourseRec1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonSubmitBackgroundColorAlabama"
                android:onClick="showTuscaloosaCourseRecs"
                android:text="@string/tuscaloosa_subject1"
                android:textColor="@color/buttonTextColorAlabama"
                android:textSize="@dimen/classButtonFontSize"
                android:visibility="visible" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/listDividerThickness"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <Button
                android:id="@+id/tuscaloosaCourseRec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonSubmitBackgroundColorAlabama"
                android:onClick="showTuscaloosaCourseRecs"
                android:text="@string/tuscaloosa_subject2"
                android:textColor="@color/buttonTextColorAlabama"
                android:textSize="@dimen/classButtonFontSize"
                android:visibility="visible" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/listDividerThickness"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <Button
                android:id="@+id/tuscaloosaCourseRec3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonSubmitBackgroundColorAlabama"
                android:onClick="showTuscaloosaCourseRecs"
                android:text="@string/tuscaloosa_subject3"
                android:textColor="@color/buttonTextColorAlabama"
                android:textSize="@dimen/classButtonFontSize"
                android:visibility="visible" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/listDividerThickness"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <Button
                android:id="@+id/tuscaloosaCourseRec4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonSubmitBackgroundColorAlabama"
                android:onClick="showTuscaloosaCourseRecs"
                android:text="@string/tuscaloosa_subject4"
                android:textColor="@color/buttonTextColorAlabama"
                android:textSize="@dimen/classButtonFontSize"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tuscaloosaRecommendTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titleFont"
        android:text="Course Recommendations"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuscaloosaRecommendTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>